RESOLVED FIXED198811
[WebGL] ANGLE Extension directive location incorrectly enforced for webgl 1.0
https://bugs.webkit.org/show_bug.cgi?id=198811
Summary [WebGL] ANGLE Extension directive location incorrectly enforced for webgl 1.0
Justin Fan
Reported 2019-06-12 15:32:43 PDT
[WebGL] ANGLE Extension directive location incorrectly enforced for webgl 1.0
Attachments
Patch (6.78 KB, patch)
2019-06-12 15:35 PDT, Justin Fan
no flags
Patch (6.76 KB, patch)
2019-06-12 15:55 PDT, Justin Fan
no flags
Archive of layout-test-results from ews103 for mac-highsierra (3.18 MB, application/zip)
2019-06-12 17:02 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews105 for mac-highsierra-wk2 (3.03 MB, application/zip)
2019-06-12 17:09 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-highsierra (3.08 MB, application/zip)
2019-06-12 17:24 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.80 MB, application/zip)
2019-06-12 17:31 PDT, EWS Watchlist
no flags
Patch for landing (6.76 KB, patch)
2019-06-12 18:44 PDT, Justin Fan
no flags
Patch for landing (6.76 KB, patch)
2019-06-12 21:27 PDT, Justin Fan
no flags
Justin Fan
Comment 1 2019-06-12 15:35:43 PDT
EWS Watchlist
Comment 2 2019-06-12 15:37:27 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Justin Fan
Comment 3 2019-06-12 15:43:02 PDT
Dean Jackson
Comment 4 2019-06-12 15:53:07 PDT
Comment on attachment 371993 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=371993&action=review > LayoutTests/webgl/webgl-extension-directive-location-no-error.html:2 > +<p>Ensure that if a shader extension directive is specified after non-preprocessor symbols, compilation succeeds.</p> I think you should mention that if it fails, output will be in the console log.
Justin Fan
Comment 5 2019-06-12 15:54:12 PDT
(In reply to Dean Jackson from comment #4) > Comment on attachment 371993 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=371993&action=review > > > LayoutTests/webgl/webgl-extension-directive-location-no-error.html:2 > > +<p>Ensure that if a shader extension directive is specified after non-preprocessor symbols, compilation succeeds.</p> > > I think you should mention that if it fails, output will be in the console > log. Done. Thanks!
Justin Fan
Comment 6 2019-06-12 15:55:03 PDT
EWS Watchlist
Comment 7 2019-06-12 17:02:31 PDT
Comment on attachment 371995 [details] Patch Attachment 371995 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/12459103 New failing tests: webgl/webgl-extension-directive-location-no-error.html
EWS Watchlist
Comment 8 2019-06-12 17:02:33 PDT
Created attachment 372000 [details] Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9 2019-06-12 17:09:13 PDT
Comment on attachment 371995 [details] Patch Attachment 371995 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/12459115 New failing tests: webgl/webgl-extension-directive-location-no-error.html
EWS Watchlist
Comment 10 2019-06-12 17:09:15 PDT
Created attachment 372001 [details] Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 11 2019-06-12 17:24:54 PDT
Comment on attachment 371995 [details] Patch Attachment 371995 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/12459004 New failing tests: webgl/webgl-extension-directive-location-no-error.html
EWS Watchlist
Comment 12 2019-06-12 17:24:56 PDT
Created attachment 372005 [details] Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 13 2019-06-12 17:31:34 PDT
Comment on attachment 371995 [details] Patch Attachment 371995 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12459049 New failing tests: webgl/webgl-extension-directive-location-no-error.html
EWS Watchlist
Comment 14 2019-06-12 17:31:36 PDT
Created attachment 372008 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.5
Justin Fan
Comment 15 2019-06-12 18:44:35 PDT
Created attachment 372012 [details] Patch for landing
WebKit Commit Bot
Comment 16 2019-06-12 19:53:50 PDT
Comment on attachment 372012 [details] Patch for landing Rejecting attachment 372012 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 372012, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/12460531
Justin Fan
Comment 17 2019-06-12 21:27:59 PDT
Created attachment 372018 [details] Patch for landing
WebKit Commit Bot
Comment 18 2019-06-12 22:10:17 PDT
Comment on attachment 372018 [details] Patch for landing Clearing flags on attachment: 372018 Committed r246393: <https://trac.webkit.org/changeset/246393>
WebKit Commit Bot
Comment 19 2019-06-12 22:10:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.