[WebGL] ANGLE Extension directive location incorrectly enforced for webgl 1.0 https://bugs.webkit.org/show_bug.cgi?id=198811

Reviewed by Dean Jackson.

Source/ThirdParty/ANGLE:

Apply ANGLE change from https://chromium-review.googlesource.com/c/angle/angle/+/1648661 to
prevent enforcing ESSL late extension rule on WebGL 1.0 shaders.

* src/compiler/preprocessor/DiagnosticsBase.cpp:
(angle::pp::Diagnostics::message):
* src/compiler/preprocessor/DiagnosticsBase.h:
* src/compiler/preprocessor/DirectiveParser.cpp:
(angle::pp::DirectiveParser::parseExtension):

LayoutTests:

ANGLE was updated so that this case should not be an error.

* webgl/webgl-extension-directive-location-no-error-expected.txt: Added.
* webgl/webgl-extension-directive-location-no-error.html: Added.


Canonical link: https://commits.webkit.org/212795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246393 268f45cc-cd09-0410-ab3c-d52691b4dbfc